--- a/index.html
+++ b/index.html
@@ -15,24 +15,131 @@
     <!--ICONOS-->
     <script src="https://kit.fontawesome.com/6c77d30505.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     
     <!--NAVB-->
-<nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets/img/viajes.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                Viajes Chile
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Inicio">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Quienes somos">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Destacados">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Destacados">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-</nav>
-    <!--CIRILO-->
-<header>
-
-</header>
-    <!--PRESENTACIÓN-->
-<section>
-
+    <!--CIRILO // ok :')-->
+<hero>
+    <div id="carousel" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="carousel1">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="carousel2">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="carousel3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+</hero>
+    <!--PRESENTACIÓN // EL ICONOOOOOOOOOOOOOOOOOGGGHHHHHH-->
+<section id="presentación" class="d-none d-sm-block">
+    <h3>Quienes somos</h3>
+    <div class="container p-4">
+        <hr>
+        <div class="row">
+            <div class="col-4 justify-content-center">
+                <i class="fa-solid fa-plane bg-info container-fluid"></i><br>
+                <p>nec mattis turpis. Integer vitae tempor libero. Sed accumsan magna ut molestie commodo. Suspendisse aliquam dui eget justo aliquet, nec congue libero euismod. Mauris faucibus egestas diam. In molestie varius dictum. Etiam eu urna eget ipsum fermentum ullamcorper. Sed sagittis purus vel ligula dapibus, id posuere ipsum cursus. Phasellus.</p>
+              </div>
+              <div class="col-4">
+                <p>Nulla rutrum lacinia nibh, id gravida ante porta ac. Nullam dapibus auctor metus at dapibus. Pellentesque venenatis fermentum sem at suscipit. Fusce purus nunc, posuere vitae luctus vel, ultrices mollis odio. Quisque varius semper ipsum in dictum. Pellentesque nec porttitor velit. Ut pulvinar turpis id mi bibendum, in tempor nibh.</p>
+                <i class="fa-solid fa-mountain bg-info container-fluid"></i>
+              </div>
+              <div class="col-4">
+                <i class="fa-solid fa-route bg-info container-fluid"></i><br>
+                <p>Donec eu sem nibh. Ut enim nunc, posuere rhoncus molestie eu, varius eget quam. Suspendisse et eleifend libero. Morbi nec nisi in tellus mattis dictum quis non libero. Curabitur ac turpis vitae magna sodales fermentum. Nam ut condimentum arcu. Vivamus iaculis volutpat quam, et rutrum enim. Donec tristique lacinia diam.</p>
+              </div>
+        </div> 
+    </div>
 </section>
+
     <!--DESTACADOS-->
-<section>
-
+<section id="destacados">
+    <h3>Destacados</h3>
+    <div class="container justify-content-center">
+        <hr>
+        <div class="row">
+          <div class="col-3">
+            <div class="card" style="width: 15rem;">
+                <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
+                <div class="card-body">
+                    <h5>Lorem ipsum dolor sit.</h5>
+                  <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="card" style="width: 15rem;">
+                <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
+                <div class="card-body">
+                    <h5>Lorem ipsum dolor sit.</h5>
+                  <p class="card-text">No hay nadie que ame el dolor mismo, que lo busque, lo encuentre y lo quiera, simplemente porque es el.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="card" style="width: 15rem;">
+                <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
+                <div class="card-body">
+                    <h5>Lorem ipsum dolor sit.</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et nulla auctor, vehicula nunc.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-3">
+            <div class="card" style="width: 15rem;">
+                <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
+                <div class="card-body">
+                    <h5>Lorem ipsum dolor sit.</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum luctus et eros eu sollicitudin.</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
 </section>
+
     <!--FORMULARIO-->
 <form action="">
 
@@ -40,11 +147,25 @@
 
     <!--FOOTER-->
 <footer>
-
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">VIAJES CHILE</span>
+        </div>
+    
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+        </ul>
+      </footer>
 </footer>
 
     <!--LA CHALLA ESA-->
-
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
