--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-    <!--CIRILO // ok :')-->
+    <!--CIRILO // si se mueve, hay qe darle un empujón nomás.. como la que escribe xd-->
 <hero>
     <div id="carousel" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
@@ -73,9 +73,9 @@
       </div>
 </hero>
     <!--PRESENTACIÓN // EL ICONOOOOOOOOOOOOOOOOOGGGHHHHHH-->
-<section id="presentación" class="d-none d-sm-block">
-    <h3>Quienes somos</h3>
-    <div class="container p-4">
+<section id="presentación" class="d-none d-sm-block bg-dark text-light">
+    <h3 class="pt-5">¿QUIENES SOMOS?</h3>
+    <div class="container">
         <hr>
         <div class="row">
             <div class="col-4 justify-content-center">
@@ -95,24 +95,24 @@
 </section>
 
     <!--DESTACADOS-->
-<section id="destacados">
-    <h3>Destacados</h3>
+<section id="destacados" class="bg-dark text-light">
+    <h3 class="pt-5">DESTACADOS</h3>
     <div class="container justify-content-center">
         <hr>
         <div class="row">
           <div class="col-3">
             <div class="card" style="width: 15rem;">
                 <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
-                <div class="card-body">
+                <div class="card-body bg-info text-light">
                     <h5>Lorem ipsum dolor sit.</h5>
-                  <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>
+                  <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit velit.</p>
                 </div>
               </div>
           </div>
           <div class="col-3">
             <div class="card" style="width: 15rem;">
                 <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
-                <div class="card-body">
+                <div class="card-body bg-info text-light">
                     <h5>Lorem ipsum dolor sit.</h5>
                   <p class="card-text">No hay nadie que ame el dolor mismo, que lo busque, lo encuentre y lo quiera, simplemente porque es el.</p>
                 </div>
@@ -121,7 +121,7 @@
           <div class="col-3">
             <div class="card" style="width: 15rem;">
                 <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
-                <div class="card-body">
+                <div class="card-body bg-info text-light">
                     <h5>Lorem ipsum dolor sit.</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et nulla auctor, vehicula nunc.</p>
                 </div>
@@ -130,7 +130,7 @@
           <div class="col-3">
             <div class="card" style="width: 15rem;">
                 <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
-                <div class="card-body">
+                <div class="card-body bg-info text-light">
                     <h5>Lorem ipsum dolor sit.</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum luctus et eros eu sollicitudin.</p>
                 </div>
@@ -141,27 +141,40 @@
 </section>
 
     <!--FORMULARIO-->
-<form action="">
+<form class="bg-dark text-light">
+    <h3 class="pt-5">CONTACTO</h3>
+    <div class="container justify-content-center pb-5">
+        <hr>
+    <div class="form-group mb-4">
+        <label class="mb-2">Nombre</label>
+        <input class="form-control">
+    </div>
 
+    <div class="form-group mb-4">
+        <label class="mb-2">Correo electrónico</label>
+        <input class="form-control"/>
+    </div>
+
+    <div class="form-group">
+        <label class="mb-2">Mensaje</label>
+        <textarea class="form-control"></textarea>
+    </div>
+
+    <div class="my-3 text-start">
+        <button class="btn btn-info text-light">Enviar</button>
+    </div>
+    </div>
 </form>
 
-    <!--FOOTER-->
-<footer>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">VIAJES CHILE</span>
-        </div>
-    
+    <!--FOOTER // 2am. no tengo ganas de lidiar con esto ahora. estoy cansada jefe x)-->
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 bg-info">
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          <li class="ms-3"><i class="fa-brands fa-github"></i></li>
+          <li class="ms-3"><i class="fa-brands fa-linkedin"></i></li>
+          <li class="ms-3"><i class="fa-brands fa-square-twitter"></i></li>
+          <li class="ms-3"><i class="fa-brands fa-square-facebook"></i></li>
         </ul>
       </footer>
-</footer>
 
     <!--LA CHALLA ESA-->
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
