--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--NAVB-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#carousel">
                 <img src="assets/img/viajes.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Viajes Chile
             </a>
@@ -32,16 +32,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#Inicio">Inicio</a>
+                        <a class="nav-link" href="#carousel">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Quienes somos">Quienes somos</a>
+                        <a class="nav-link" href="#presentación">Quienes somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Destacados">Destacados</a>
+                        <a class="nav-link" href="#destacados">Destacados</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Destacados">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -141,7 +141,7 @@
 </section>
 
     <!--FORMULARIO-->
-<form class="bg-dark text-light">
+<form id="contacto" class="bg-dark text-light">
     <h3 class="pt-5">CONTACTO</h3>
     <div class="container justify-content-center pb-5">
         <hr>
